--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
- {
+{
   "name": "cabin-site",
   "version": "0.0.0",
   "devDependencies": {
@@ -11,10 +11,11 @@
     "grunt-contrib-connect": "~0.5.0",
     "grunt-open": "~0.2.0",
     "grunt-contrib-clean": "~0.4.0",
-    "grunt-gh-pages": "~0.8.0"
+    "grunt-gh-pages": "~0.8.0",
+    "grunt-bower-task": "~0.3.4",
+    "bower": "~1.2.7"
   },
   "engines": {
     "node": ">=0.10.0"
   }
 }
-
