fix #31 ayapi-cabinにpushしたら自動でayapi.github.ioにデプロイするょーにしくみをっくる

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "grunt-contrib-clean": "~0.4.0",
     "grunt-gh-pages": "~0.8.0",
     "grunt-bower-task": "~0.3.4",
-    "bower": "~1.2.7"
+    "bower": "~1.2.7",
+    "grunt-git": "~0.2.1"
   },
   "engines": {
     "node": ">=0.10.0"
